crates/djls-semantic/src/semantic/snapshots/djls_semantic__semantic__forest__tests__intermediate.snap
---
source: crates/djls-semantic/src/semantic/forest.rs
expression: "ForestSnapshot::capture(forest, &db)"
---
roots:
  - Tag:
      name: if
      marker_span:
        start: 3
        length: 18
      arguments:
        - user.is_staff
      segments:
        - kind: Main
          marker_span:
            start: 3
            length: 18
          content_span:
            start: 3
            length: 46
          arguments:
            - user.is_staff
          children: []
        - kind:
            Intermediate:
              tag: elif
          marker_span:
            start: 47
            length: 26
          content_span:
            start: 49
            length: 52
          arguments: []
          children: []
        - kind:
            Intermediate:
              tag: else
          marker_span:
            start: 99
            length: 10
          content_span:
            start: 101
            length: 34
          arguments: []
          children: []
tag_spans:
  - start: 1
    length: 22
  - start: 45
    length: 30
  - start: 97
    length: 14
