crates/djls-semantic/src/semantic/snapshots/djls_semantic__semantic__forest__tests__semantic_forest_snapshot.snap
---
source: crates/djls-semantic/src/semantic/forest.rs
expression: "ForestSnapshot::capture(forest, &db)"
---
roots:
  - Tag:
      name: block
      marker_span:
        start: 3
        length: 14
      arguments:
        - header
      segments:
        - kind: Main
          marker_span:
            start: 3
            length: 14
          content_span:
            start: 3
            length: 36
          arguments:
            - header
          children: []
  - Tag:
      name: if
      marker_span:
        start: 64
        length: 26
      arguments:
        - user.is_authenticated
      segments:
        - kind: Main
          marker_span:
            start: 64
            length: 26
          content_span:
            start: 64
            length: 146
          arguments:
            - user.is_authenticated
          children:
            - Tag:
                name: for
                marker_span:
                  start: 99
                  length: 19
                arguments:
                  - item
                  - in
                  - items
                segments:
                  - kind: Main
                    marker_span:
                      start: 99
                      length: 19
                    content_span:
                      start: 99
                      length: 56
                    arguments:
                      - item
                      - in
                      - items
                    children:
                      - Leaf:
                          label: "<var>"
                          span:
                            start: 135
                            length: 6
                  - kind:
                      Intermediate:
                        tag: empty
                    marker_span:
                      start: 153
                      length: 11
                    content_span:
                      start: 155
                      length: 40
                    arguments: []
                    children: []
        - kind:
            Intermediate:
              tag: else
          marker_span:
            start: 208
            length: 10
          content_span:
            start: 210
            length: 34
          arguments: []
          children: []
tag_spans:
  - start: 1
    length: 18
  - start: 62
    length: 30
  - start: 97
    length: 23
  - start: 151
    length: 15
  - start: 206
    length: 14
